# Rust-RabbitMQ-Worker-Template

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-build.yaml
src/: main.rs  rabbitmq.rs
src-batch/: rabbitmq.rs
src-single/: main.rs  rabbitmq.rs
