[package]
name = "rust-rmq-worker"
version = "1.0.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
futures = "0.3.31"
lapin = "3.7.2"
log = "0.4"


[profile.release]
overflow-checks = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
lto = "fat"
